# YN_SS_AIclass

./: .gitignore  TBview.py  api_app_main.py  data_harvest.py  import_file.py  migrate.py  pyproject.toml  test_client.py
API_app/apis/: test.py
API_app/model/: dataclass.py
API_app/routes/: CONDB.py  DBLine.py  NN01.py  test.py
API_app/templates/: NN01_home.html  base.html  charts_example_01.html
DW/: dataclass.py  pipline.py
DW/API/: __init__.py  api_work.py
DW/DB/db_models/: CSCIDS2017.py
DW/DB/query/: crud.py
DW/Storage/: CSCIDS.db  factors.xlsx  test_keystats_01.xlsx
DW/db/: __init__.py  async_migrate.py  connection.py  session.py
DW/db/crud/: crud_test.py
DW/db/db_models/: CSCIDS2017.py  base_model.py  test_model.py
DW/db/query/: crud.py
GUI/: DataView.py
GUI/srcUI/: example01.ui
ML_BASE/: ML_dataloader.py  ML_main.py  exp_main.py
ML_BASE/ML_data_provider/: data_factory.py  data_loader_CSCIDS.py
ML_BASE/ML_models/: Seq2Seq_ex02.py  exp_stat.py
ML_BASE/ML_operate/: tools.py
ML_BASE/data_provider/: data_factory.py  data_loader.py  data_loader_CSCIDS.py
UI/GUI/: DataView.py
core/: .env  config.py
operate/: operator.py
