[tool.poetry]
name = "yn-ss-aiclass"
version = "0.1.0"
description = "class practice"
authors = ["hugwolf77 <hugwolf77@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
